<?xml version="1.0"?>
<package format="2">
  <name>smb_highlevel_controller</name>
  <version>0.1.0</version>
  <description>The smb_lmao package</description>
  <maintainer email="lmaodxd@gmail.com">lmaodxd</maintainer>
  <license>BSD</license>
  <author email="lmaodxd@gmail.com">lmaodxd</author>
  <author email="lmaodxd@gmail.com">lmaodxd</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
</package>